syntax = "proto3";
package proto;
option go_package = "kv-store/proto";

service KeyValueStore {
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

service Replication {
  rpc Replicate(ReplicateRequest) returns (ReplicateResponse) {}
}

message ReplicateRequest {
  string key = 1;
  string value = 2;
  enum OpType {
    SET = 0;
    DELETE = 1;
  }
  OpType operation = 3;
}

message ReplicateResponse { bool ok = 1; }

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse { bool ok = 1; }

message GetRequest { string key = 1; }

message GetResponse { string value = 1; }

message DeleteRequest { string key = 1; }

message DeleteResponse { bool ok = 1; }
